recallable/tests/ui/derive_fail_recallable_skip_with_unknown_parameter.rs
use recallable::Recallable;

#[derive(Recallable)]
struct InvalidRecallableSkipParameter<T> {
    #[recallable(skip, unknown)]
    value: T,
}

fn main() {}
